[tool.poetry]
name = "pycograph"
version = "0.2.0"
description = ""
authors = ["reka <reka@hey.com>"]


[tool.poetry.scripts]
pycograph = "pycograph.cli:app"


[tool.poetry.dependencies]
python = "^3.8"
typer = "0.3.2"
redisgraph = "^2.3"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-mock = "^3.5"
black = "20.8b1"
coverage = "^5.5"
isort = "^5.6"
mypy = "0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
