[metadata]
name = pycograph
version = 0.2.1
author = reka
author_email = reka@hey.com
description = Create a RedisGraph model of a Python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reka/pycograph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent